# ralph

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  _typos.toml  clippy.toml
.claude/: settings.local.json
.claude/context/: rust-cli-clap.md  rust-cli-env-config.md  rust-cli-error-handling.md
.claude/designs/: 2026-01-06-run-command-architecture.md
.claude/plans/: prd.toml  progress.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
.local/plans/: prd.toml  progress.txt
assets/: strategy.toml
assets/agents/: architect.md  critic.md  developer.md  editor-agent.md  product-manager.md  reviewer.md  storyteller.md  tester.md  worldbuilder.md
assets/strategies/: fiction-loop.toml  prd-loop.toml
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  completion.rs  context.rs  directive.rs  human.rs  lib.rs  paused.rs  persona.rs  prd.rs  session.rs  session_tests.rs  strategy.rs  stream.rs  transcript.rs
crates/core/src/chunk/: batch.rs  fence.rs  heuristics.rs  mod.rs  streaming.rs  tests.rs  types.rs
crates/core/src/chunk/tests/: batch.rs  fence.rs  mod.rs  split_lines.rs  streaming_core.rs  streaming_threshold.rs  streaming_whitespace.rs
crates/core/src/stream/: accumulation.rs  chunks.rs  costs.rs  events.rs  extraction.rs  metadata.rs  mod.rs  parsing.rs  tests.rs  tools.rs
crates/core/src/stream/tests/: chunk_parsing.rs  core.rs  extraction.rs  iteration_costs.rs  ndjson.rs  text_accumulation.rs  tool_correlation.rs  tool_invocation.rs
crates/ralph/: Cargo.toml
crates/ralph/src/: ansi.rs  ask.rs  cli.rs  config.rs  diff_highlight.rs  formatting.rs  git.rs  highlight.rs  human.rs  init.rs  invoke.rs  iteration.rs  iterations.rs  keyboard.rs  main.rs  main_tests.rs  markdown.rs  paths.rs  persona.rs  prompt.rs  prompt_source.rs  recovery.rs  replay.rs  replay_countdown.rs  replay_renderer.rs  run.rs  session.rs  sessions_display.rs  signal.rs  spinner.rs  startup.rs  strategy.rs  stream_processor.rs  stream_processor_tests.rs  subprocess.rs  summarize.rs  warn.rs
crates/ralph/src/cli/: mod.rs  tests.rs
crates/ralph/src/cli/tests/: ask.rs  persona.rs  strategy.rs
crates/ralph/src/edit/: core.rs  mod.rs  tests.rs  types.rs
crates/ralph/src/iteration/: chunk.rs  error.rs  log.rs  metadata.rs  mod.rs  tests.rs  tool_call.rs  writer.rs
crates/ralph/src/iteration/tests/: chunk.rs  log.rs  metadata.rs  parsed_chunk.rs  tool_call.rs  writer.rs
crates/ralph/src/orchestrator/: ask.rs  conversation.rs  display.rs  mod.rs  parallel.rs
crates/ralph/src/render/: mod.rs  text.rs  tool_renderers.rs  utils.rs
crates/ralph/src/render/tool_renderers/: README.md  context.rs  mod.rs  tests.rs  types.rs
crates/ralph/src/render/tool_renderers/invocations/: bash.rs  default.rs  glob.rs  grep.rs  mod.rs  read.rs  todowrite.rs
crates/ralph/src/render/tool_renderers/results/: bash.rs  default.rs  edit.rs  glob.rs  grep.rs  mod.rs  notebook.rs  read.rs  todowrite.rs  write.rs
crates/ralph/src/run/: execute.rs  mod.rs  recovery.rs  tests.rs
crates/ralph/src/run/tests/: e2e.rs  integration.rs  unit.rs
crates/ralph/src/spinner/: mod.rs  tests.rs
crates/ralph/src/startup/: display.rs  formatters.rs  mod.rs  plain.rs  terminal.rs  tests.rs  types.rs
crates/ralph/src/strategy/: assets.rs  conversation_loop.rs  execute.rs  init.rs  mod.rs  prd_loop.rs  traits.rs
crates/ralph/src/stream_processor/: block_builders.rs  event_handler.rs  mod.rs  output_block.rs  processor.rs  result_handlers.rs  test_helpers.rs  types.rs  utils.rs
crates/ralph/src/stream_processor/tests/: bash_rendering.rs  core.rs  edit_diff.rs  glob_verbose.rs  grep_verbose.rs  mod.rs  path_display.rs  tool_display.rs  verbose_config.rs  visual_separation.rs  whitespace.rs
crates/ralph/src/stream_processor/tool_display/: bash.rs  glob.rs  grep.rs  mod.rs  read.rs  todowrite.rs
crates/ralph/src/stream_processor/tool_results/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  notebookedit.rs  read.rs  todowrite.rs  write.rs
crates/ralph/src/subprocess/: basic.rs  mod.rs  spinner.rs  streaming.rs  tests.rs  themed.rs  timeout.rs  types.rs
docs/: cli-reference.md  configuration.md  development.md  output-blocks.md  prd-format.md  rendering-audit.md
docs/context/: conversation-loop.md  git-workflow.md  orchestration.md  prompt-template.md  ralph-ask.md  ralph-edit.md  ralph-persona.md  ralph-run.md  ralph-strategy-sync.md  ralph-strategy.md  runtime-control.md  rust-cli-io.md  rust-cli-project-structure.md  rust-cli-serde.md  stream-processor-architecture.md
docs/plans/: cli-main-simplification.md  core-simplification.md  stream-processor-simplification.md
personas/: architect.md  developer.md  pm.md  reviewer.md  tester.md
scripts/: run-loop.sh
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  prelude.rs
xtask/src/lint/: error.rs  hooks.rs  mod.rs
xtask/src/scripts/: hooks.rs  install.rs  install_binary.rs  mod.rs  release.rs
