[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
ralph_core = { version = "0.0.0", path = "crates/core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
color-eyre = "0.6"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Output formatting
anstream = "0.6"
prettytable = "0.10"

# HTTP client (for existing features)
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JSON
serde_json = "1.0"

# Regex
regex = "1.0"

# Testing
tempfile = "3.10"
