[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.lints.clippy]
# Note: unwrap_used and expect_used are enabled in lib.rs/main.rs via #![deny(...)]
# rather than here, so test code can still use .unwrap() for brevity.
# See crates/*/src/lib.rs and crates/*/src/main.rs for the denials.

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]
rust-version = "1.82.0"

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]

# Ctrl+C / SIGINT handling
ctrlc = "3.4"

# Output formatting
anstream = "0.6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration directories
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
color-eyre = "0.6"

# Logging
env_logger = "0.11"
log = "0.4"
prettytable = "0.10"
ralph_core = { version = "0.0.0", path = "crates/core" }

# Random number generation
rand = "0.8"

# Regex
regex = "1.0"

# HTTP client (for existing features)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Diff generation
similar = "2.6"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Markdown terminal rendering
termimad = "0.30"

# JSON
serde_json = "1.0"

# Testing
tempfile = "3.10"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
