[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.lints.clippy]
# Note: unwrap_used and expect_used are enabled in lib.rs/main.rs via #![deny(...)]
# rather than here, so test code can still use .unwrap() for brevity.
# See crates/*/src/lib.rs and crates/*/src/main.rs for the denials.

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]
rust-version = "1.87.0"

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]

# Output formatting
anstream = "1.0.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
color-eyre = "0.6"

# Cross-platform terminal manipulation
crossterm = "0.29"

# Ctrl+C / SIGINT handling
ctrlc = "3.4"

# Configuration directories
dirs = "6.0.0"

# Logging
env_logger = "0.11"
log = "0.4"
prettytable = "0.10"
ralph_core = { version = "0.0.0", path = "crates/core" }

# Random number generation
rand = "0.10.0"

# Regex
regex = "1.0"

# HTTP client (for existing features)
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# JSON
serde_json = "1.0"

# Diff generation
similar = "2.6"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = [
  "default-fancy",
] }

# Testing
tempfile = "3.10"

# Markdown terminal rendering
termimad = "0.34.1"
thiserror = "2.0.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
toml = "1.0.3+spec-1.1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }
