[package]
name = "ralph_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/ralph"
description = "Core for the ralph project"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ralph_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies for pure transformation functions

[dev-dependencies]
