[package]
name = "ralph"
version = "1.6.0"
homepage = "https://github.com/cloudbridgeuy/mcptools"
description = "Ralph pattern implementation for LLM Vibe Coding"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
ralph_core = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
