[package]
name = "ralph"
version = "1.6.0"
homepage = "https://github.com/cloudbridgeuy/mcptools"
description = "Ralph pattern implementation for LLM Vibe Coding"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
ralph_core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
tempfile = { workspace = true }
